--- a/package.json
+++ b/package.json
@@ -8,14 +8,13 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "tailwind": "./bin/tailwindcss"
+    "deploy": "vite build && gh-pages -d dist",
+    "homepage": "https://magentaong.github.io/MovieMaybe"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
-    "appwrite": "^18.1.1",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "react-use": "^17.6.0"
+    "react-dom": "^19.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
@@ -26,7 +25,6 @@
     "eslint": "^9.29.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
-    "gh-pages": "^6.3.0",
     "globals": "^16.2.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.11",
